# konto-verwaltung-ui/src/app/api-services/models.ts
@@ -1,7 +1,8 @@
 /* tslint:disable */
 /* eslint-disable */
-export { CurrencyRate } from './models/currency-rate';
-export { CurrencyRateVib } from './models/currency-rate-vib';
+export { CurrencyExchangeRate } from './models/currency-exchange-rate';
+export { CurrencyExchangeRateId } from './models/currency-exchange-rate-id';
 export { MonthTotal } from './models/month-total';
+export { Rates } from './models/rates';
 export { Transaction } from './models/transaction';
 export { TransactionRequest } from './models/transaction-request';
