# konto-verwaltung-ui/src/app/api-services/models/currency-exchange-rate-id.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CurrencyExchangeRateId {
+  bank?: 'VIB' | 'VCB' | 'PAYPAL';
+  date?: string;
+}
