# konto-verwaltung-ui/src/app/api-services/models/currency-exchange-rate.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { CurrencyExchangeRateId } from '../models/currency-exchange-rate-id';
+export interface CurrencyExchangeRate {
+  id?: CurrencyExchangeRateId;
+  rate?: number;
+}
