# konto-verwaltung-ui/src/app/api-services/models/currency-rate-vib.ts
@@ -1,6 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface CurrencyRateVib {
-  date?: string;
-  rate?: number;
-}
