# konto-verwaltung-ui/src/app/api-services/models/currency-rate.ts
@@ -1,6 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface CurrencyRate {
-  date?: string;
-  rate?: number;
-}
