# konto-verwaltung-ui/src/app/api-services/models/rates.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { CurrencyExchangeRate } from '../models/currency-exchange-rate';
+export interface Rates {
+  paypalRates?: Array<CurrencyExchangeRate>;
+  vcbRates?: Array<CurrencyExchangeRate>;
+  vibRates?: Array<CurrencyExchangeRate>;
+}
