# konto-verwaltung/src/main/java/vn/diepgia/mchis/konto_verwaltung/controllers/WebController.java
@@ -5,7 +5,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 
 @Controller
 public class WebController {
-    @GetMapping(value = {"", "/currency", "/years/**"})
+    @GetMapping(value = {"", "/", "/currency", "/years/**"})
     public String forward() {
         return "index.html";
     }
