# konto-verwaltung/src/main/java/vn/diepgia/mchis/konto_verwaltung/entities/CurrencyExchangeRateId.java
@@ -1,21 +1,20 @@
 package vn.diepgia.mchis.konto_verwaltung.entities;
 
-import jakarta.persistence.Entity;
-import jakarta.persistence.Id;
+import jakarta.persistence.Embeddable;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import java.io.Serializable;
 import java.time.LocalDate;
 
-@Entity
-@NoArgsConstructor
-@AllArgsConstructor
-@Builder
 @Data
-public class CurrencyRateVIB {
-    @Id
+@AllArgsConstructor
+@NoArgsConstructor
+@Embeddable
+@Builder
+public class CurrencyExchangeRateId implements Serializable {
+    private BankName bank;
     private LocalDate date;
-    private float rate;
 }
